--- a/css/style.css
+++ b/css/style.css
@@ -111,29 +111,30 @@ span {
     gap: 20px;
     .post-top {
       display: flex;
+      align-items: center;
       justify-content: space-between;
       width: 100%;
     }
-    .post-bottom {
+    .post-main {
       display: flex;
+      align-items: center;
       justify-content: space-between;
       width: 100%;
-
       .post-card {
-        background: #ffffff;
+        background: #fff;
         display: flex;
-        flex-direction: column;
         align-items: start;
-        gap: 20px;
-        width: 500px;
-        padding: 15px;
-        P {
-          justify-content: center;
-        }
+        flex-direction: column;
+        gap: 35px;
+        padding: 15px 30px;
+      }
+      P {
+        justify-content: center;
       }
     }
   }
 }
+
 /* works */
 #works {
   padding-block: 60px;
